<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil"
    tools:menu="@menu/navigation_menu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="176dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="172dp"
        android:text="@string/modiftitulo"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombreLabel"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="21dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:hint="Usuario"
        android:importantForAutofill="no"
        android:inputType="textPersonName|text"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreLabel" />

    <TextView
        android:id="@+id/mailLabel"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="21dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:hint="Email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailLabel" />

    <TextView
        android:id="@+id/tlfFijoLabel"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="21dp"
        android:text="@string/tlfFijo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/tlfFijo"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:hint="@string/tlfFijo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlfFijoLabel" />

    <TextView
        android:id="@+id/tlfMovilLabel"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="21dp"
        android:text="@string/tlfMovil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlfFijo" />

    <EditText
        android:id="@+id/tlfMovil"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:hint="@string/tlfMovil"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlfMovilLabel" />

    <TextView
        android:id="@+id/AreaLabelE"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="21dp"
        android:text="@string/areaname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlfMovil" />

    <Spinner
        android:id="@+id/spinner_Areas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:hint="@string/areaname"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        android:text="@string/areaname"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AreaLabelE" />

    <TextView
        android:id="@+id/fecAltaLabelE"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="21dp"
        android:text="@string/fecAlta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_Areas" />

    <EditText
        android:id="@+id/fecAlta"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:hint="@string/fecAlta"
        android:importantForAutofill="no"
        android:inputType="none"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fecAltaLabelE" />

    <TextView
        android:id="@+id/RolesE"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:text="@string/RolesE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fecAlta" />

    <Switch
        android:id="@+id/userButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="1dp"
        android:text="@string/usuariosistema"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RolesE"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="140dp"
        android:text="@string/adminButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="@id/userButton"
        app:layout_constraintTop_toBottomOf="@+id/RolesE"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/reportesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:text="@string/reportes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="@id/adminButton"
        app:layout_constraintTop_toBottomOf="@+id/RolesE"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttoneditaruser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/editar_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminButton" />

</androidx.constraintlayout.widget.ConstraintLayout>