<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Singup"
    tools:ignore="HardcodedText">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="64dp"
        android:text="@string/newUser"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:hint="Usuario"
        android:importantForAutofill="no"
        android:inputType="textPersonName|text"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <EditText
        android:id="@+id/pwdUser"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:hint="Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/mailUser"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:hint="Email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="237dp"
        app:layout_constraintTop_toBottomOf="@+id/pwdUser" />

    <EditText
        android:id="@+id/tlfFijo"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:hint="@string/tlfFijo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailUser" />

    <EditText
        android:id="@+id/tlfMovil"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:focusable="true"
        android:hint="@string/tlfMovil"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlfFijo" />

    <Switch
        android:id="@+id/userButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:text="@string/usuariosistema"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlfMovil"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="136dp"
        android:text="@string/adminButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="@id/userButton"
        app:layout_constraintTop_toBottomOf="@+id/tlfMovil"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/reportesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/reportes"
        app:layout_constraintRight_toRightOf="@id/adminButton"
        app:layout_constraintTop_toBottomOf="@+id/tlfMovil"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="441dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttoncrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/crear_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminButton" />


</androidx.constraintlayout.widget.ConstraintLayout>