<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil"
    tools:menu="@menu/navigation_menu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="176dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="172dp"
        android:text="@string/perfiltitulo"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="104dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nombreLabel"
                        android:layout_width="121dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nombre"
                        android:layout_width="222dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/AreaLabel"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:text="@string/areaname"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/area"
                    android:layout_width="222dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mailLabel"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="222dp"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fecAltaLabel"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fecAlta"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fecAlta"
                    android:layout_width="222dp"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tlfFijoLabel"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tlfFijo"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tlfFijo"
                    android:layout_width="222dp"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tlfMovilLabel"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tlfMovil"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tlfMovil"
                    android:layout_width="222dp"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>